--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     repositories {
         jcenter()
-        google()
+        maven {
+            url "https://maven.google.com"
+        }
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,7 +18,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        google()
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
